--- a/index.html
+++ b/index.html
@@ -165,117 +165,148 @@
         </div>
       </section>
       <section id="procedures-section">
-        <h2 class="procedures-title">Наші <span>процедури</span></h2>
-        <ul>
-          <li>
-            <article>
-              <img
-                src="./images/procedure-mask.jpg"
-                alt="Процедура нанесення маски на обличчя жінки"
-              />
-            </article>
-          </li>
-          <li>
-            <article>
-              <img
-                src="./images/procedure-injections.jpg"
-                alt="Процедура введення ін'єкцій на обличчі жінки"
-              />
-            </article>
-          </li>
-          <li>
-            <article>
-              <img
-                src="./images/procedure-peeling.jpg"
-                alt="Процедура піллінгу обличчя жінки"
-              />
-            </article>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="procedures-title">Наші <span>процедури</span></h2>
+          <div class="procedures-container">
+            <button class="carousel-button" type="button">
+              <svg class="carousel-arrow" width="16" height="16">
+                <use href="./images/icons.svg#icon-arrow"></use>
+              </svg>
+            </button>
+            <ul class="procedures-list">
+              <li>
+                <article>
+                  <img
+                    src="./images/procedure-mask.jpg"
+                    alt="Процедура нанесення маски на обличчя жінки"
+                  />
+                </article>
+              </li>
+              <li>
+                <article>
+                  <img
+                    src="./images/procedure-injections.jpg"
+                    alt="Процедура введення ін'єкцій на обличчі жінки"
+                  />
+                </article>
+              </li>
+              <li>
+                <article>
+                  <img
+                    src="./images/procedure-peeling.jpg"
+                    alt="Процедура піллінгу обличчя жінки"
+                  />
+                </article>
+              </li>
+            </ul>
+            <button class="carousel-button" type="button">
+              <svg class="carousel-arrow" width="16" height="16">
+                <use href="./images/icons.svg#icon-arrow"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </section>
       <section id="contacts-section">
-        <h2 class="contacts-title">Як нас <span>знайти</span></h2>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2537.475791668505!2d30.775223399999994!3d50.50671339999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4d97de411b701%3A0x48116b28f7f00d94!2z0LLRg9C70LjRhtGPINCi0LDRgNCw0YHQsCDQqNC10LLRh9C10L3QutCwLCA1LCDQkdGA0L7QstCw0YDQuCwg0JrQuNGX0LLRgdGM0LrQsCDQvtCx0LvQsNGB0YLRjCwgMDc0MDA!5e0!3m2!1suk!2sua!4v1722506252083!5m2!1suk!2sua"
-          width="600"
-          height="450"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-          frameborder="0"
-        ></iframe>
-        <!-- Modal window -->
+        <div class="container">
+          <h2 class="contacts-title">Як нас <span>знайти</span></h2>
+          <div class="contacts-container">
+            <iframe
+              class="contact-map"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2537.475791668505!2d30.775223399999994!3d50.50671339999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4d97de411b701%3A0x48116b28f7f00d94!2z0LLRg9C70LjRhtGPINCi0LDRgNCw0YHQsCDQqNC10LLRh9C10L3QutCwLCA1LCDQkdGA0L7QstCw0YDQuCwg0JrQuNGX0LLRgdGM0LrQsCDQvtCx0LvQsNGB0YLRjCwgMDc0MDA!5e0!3m2!1suk!2sua!4v1722506252083!5m2!1suk!2sua"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+              frameborder="0"
+            ></iframe>
+            <!-- Modal window -->
+          </div>
+        </div>
       </section>
     </main>
     <footer>
-      <nav>
-        <a href="./index.html">
-          <img src="./images/footer-logo.svg" alt="Логотип Beauty Zone" />
-        </a>
-        <ul>
-          <li>
-            <a class="footer-link" href="#clinic-info-section">Про нас</a>
-          </li>
-          <li><a class="footer-link" href="#advantages-section">Чому ми</a></li>
-          <li>
-            <a class="footer-link" href="#procedures-section">Наші процедури</a>
-          </li>
-          <li><a class="footer-link" href="#contacts-section">Контакти</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul>
-          <li>
-            <a class="address-link" href="tel:+380960000007"
-              >+ 38 (096) 000 00 07</a
-            >
-          </li>
-          <li>
-            <a class="address-link" href="mailto:beautyzone@gmail.com"
-              >beautyzone@gmail.com</a
-            >
-          </li>
-          <li>
-            <a
-              class="address-link"
-              href="https://maps.app.goo.gl/7FGhb59zuvKdpxcw8"
-              target="_blank"
-            >
-              Україна, м. Київ, вул. Тараса Шевченка 5
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img
-                src="./images/footer-telephone-icon.jpg"
-                alt="telephone-icon"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img
-                src="./images/footer-facebook-icon.jpg"
-                alt="facebook-icon"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img
-                src="./images/footer-instagram-icon.jpg"
-                alt="instagram-icon"
-              />
-            </a>
-          </li>
-        </ul>
-        <a class="address-link" href="#" target="_blank"
-          >Політика конфіденційності
-        </a>
-        <p class="address-copyright">&copy; 2022 Дані захищені</p>
-      </address>
-      <img src="./images/footer_mixture.jpg" alt="Пляшка з мікстурою" />
+      <div class="container">
+        <div class="footer-container">
+          <nav class="footer-nav">
+            <div class="footer-logo">
+              <a href="./index.html">
+                <img src="./images/footer-logo.svg" alt="Логотип Beauty Zone" />
+              </a>
+            </div>
+            <ul class="footer-menu">
+              <li>
+                <a class="footer-link" href="#clinic-info-section">Про нас</a>
+              </li>
+              <li>
+                <a class="footer-link" href="#advantages-section">Чому ми</a>
+              </li>
+              <li>
+                <a class="footer-link" href="#procedures-section"
+                  >Наші процедури</a
+                >
+              </li>
+              <li>
+                <a class="footer-link" href="#contacts-section">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="footer-address">
+            <ul class="address-list">
+              <li>
+                <a class="address-link" href="tel:+380960000007"
+                  >+ 38 (096) 000 00 07</a
+                >
+              </li>
+              <li>
+                <a class="address-link" href="mailto:beautyzone@gmail.com"
+                  >beautyzone@gmail.com</a
+                >
+              </li>
+              <li>
+                <a
+                  class="address-link"
+                  href="https://maps.app.goo.gl/7FGhb59zuvKdpxcw8"
+                  target="_blank"
+                >
+                  Україна, м. Київ, <br />
+                  вул. Тараса Шевченка 5
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <svg class="address-icon" width="32" height="32">
+                    <use href="./images/icons.svg#icon-telephone"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <svg class="address-icon" width="32" height="32">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <svg class="address-icon" width="32" height="32">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+            <div class="address-info">
+              <a class="address-link" href="#" target="_blank"
+                >Політика конфіденційності
+              </a>
+              <p class="address-copyright">&copy; 2022 Дані захищені</p>
+            </div>
+          </address>
+          <!-- <img src="./images/footer_mixture.jpg" alt="Пляшка з мікстурою" /> -->
+        </div>
+      </div>
     </footer>
   </body>
 </html>
